--- a/web/static/css/sidenav.css
+++ b/web/static/css/sidenav.css
@@ -36,40 +36,84 @@ a:focus {
     SIDEBAR STYLE
 ----------------------------------------------------- */
 
-.wrapper {
-    display: flex;
-    width: 100%;
-    align-items: stretch;
-}
-
-#sidebar {
-    min-width: 250px;
-    max-width: 250px;
+.sidebar {
+    width: 4.5rem;
+    height: 100vh;
     background: var(--bg-sidenav);
     color: var(--text-secondary);
-    transition: all 0.3s;
+    transition: all 0.3s ease;
+    position: fixed;
+    overflow-x: hidden;
+    z-index: 100;
+    font-size: 18px;
 }
 
-#sidebar.active {
-    margin-left: -250px;
+.sidebar-items {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    height: 100%;
 }
 
-#sidebar .sidebar-header {
-    padding: 20px;
+.sidebar-item {
+    display: inline-block;
+    white-space: nowrap;   
+}
+
+.sidebar-item:last-child {
+    margin-top: auto;
+}
+
+.link-text {
+    display: none;
+    margin-left: 1rem;
+}
+
+.sidebar:hover {
+    width: 15rem;
+}
+
+.sidebar:hover .link-text {
+    display: inline;
+}
+
+.sidebar-header {
     background: #6d7fcc;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: right;
+    font-size: 1.1rem;
+    letter-spacing: 0.3ch;
+    width: 100%;
+    height: 4rem;
+    padding-top: 0.5rem;
 }
 
-#sidebar ul.components {
-    padding: 20px 0;
-    border-bottom: 1px solid var(--primary-accent);
+.sidebar-header-text {
+    display: inline;
+    position: absolute;
+    left: -999px;
+    transition: 0.3s;
 }
 
-#sidebar ul p {
-    color: #fff;
-    padding: 10px;
+.sidebar:hover .sidebar-header-text {
+    left: 0px;
+    transition: 0s;
 }
 
-#sidebar ul li a {
+.sidebar-header i {
+    transform:rotate(0deg);
+    transition: transform 0.3s;
+}
+
+.sidebar:hover .sidebar-header i {
+    transform:rotate(180deg);
+}
+
+.sidebar ul li a {
     padding: 10px;
     font-size: 1.1em;
     display: block;
@@ -98,22 +142,13 @@ a[data-toggle="collapse"] {
     transform: translateY(-50%);
 }
 
-ul ul a {
-    font-size: 0.9em !important;
-    padding-left: 30px !important;
-    background: #6d7fcc;
+
+ul.sidebar-footer {
+    margin-top: auto;
 }
 
-ul.CTAs {
-    padding: 20px;
-}
-
-ul.CTAs a {
-    text-align: center;
-    font-size: 0.9em !important;
-    display: block;
-    border-radius: 5px;
-    margin-bottom: 5px;
+a.collapse-btn {
+    text-align: left;
 }
 
 
@@ -125,6 +160,7 @@ ul.CTAs a {
 #content {
     width: 100%;
     padding: 20px;
+    padding-left: 5rem;;
     min-height: 100vh;
     transition: all 0.3s;
 }
