--- a/web/templates/sidenav.html
+++ b/web/templates/sidenav.html
@@ -12,7 +12,7 @@
 
         <li class="sidebar-item sidebar-header">
             <a href="/">
-                <span class="link-text sidebar-header-text">
+                <span class="sidebar-header-text">
                     <span class="link-text">MotionLink</span>
                 </span>
                 <i class="fas fa-angle-double-left"></i>
@@ -20,16 +20,13 @@
         </li>
 
         <li class="sidebar-item">
-            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fas fa-home"></i><span class="link-text">Home</span></a>
+            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fas fa-tools"></i><span class="link-text">Actions</span></a>
             <ul class="collapse list-unstyled" id="homeSubmenu">
-                <li>
-                    <a href="#">Home 1</a>
+                <li class="sidebar-subitem">
+                    <a href="#">Restart Server</a>
                 </li>
-                <li>
-                    <a href="#">Home 2</a>
-                </li>
-                <li>
-                    <a href="#">Home 3</a>
+                <li class="sidebar-subitem">
+                    <a href="#">Shutdown Server</a>
                 </li>
             </ul>
         </li>
