--- a/web/templates/sidenav.html
+++ b/web/templates/sidenav.html
@@ -23,6 +23,9 @@
             <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fas fa-tools"></i><span class="link-text">Actions</span></a>
             <ul class="collapse list-unstyled" id="homeSubmenu">
                 <li class="sidebar-subitem">
+                    <a href="#">Check for Updates</a>
+                </li>
+                <li class="sidebar-subitem">
                     <a href="#">Restart Server</a>
                 </li>
                 <li class="sidebar-subitem">
