--- a/web/templates/config.html
+++ b/web/templates/config.html
@@ -1,14 +1,54 @@
 {% extends 'layout.html' %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/config.css') }}">
+{% endblock %}
+
+{% block extra_js %}
+    <script src="{{ url_for('static', filename='js/config.js') }}"></script>
+{% endblock %}
+
 {% block content %}
     <div class="card">
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <div class="card-title">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h4>Config Editor</h4>
+                    </div>
+                    <div class="col-md-6 text-right">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-danger" id="restore-btn"><i class="fas fa-trash-restore"></i>Restore Default</button>
+                            <button class="btn btn-default" id="validate-btn"><i class="fas fa-check"></i>Validate</button>
+                            <button class="btn btn-success" id="save-btn"><i class="fas fa-save"></i>Save Changes</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <p class="card-text">
-                this is where config stuff will be
+                <textarea  spellcheck="false" class="config-editor" id="config-editor">{{ config_data }}</textarea>
             </p>
-            <a href="/" class="btn">Go home</a>
         </div>
     </div>
+
+    <div class="modal fade" tabindex="-1" role="dialog" id="restoreModal">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Are you sure?</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Your current config will be replaced with default values. A copy of your current config will be saved as a backup.</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-danger" id="restore-confirm-btn">Restore Default</button>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
 {% endblock %}
