+config page, cleaned code, sidebar additions

--- a/web/templates/sidenav.html
+++ b/web/templates/sidenav.html
@@ -26,10 +26,10 @@
                     <a href="#">Check for Updates</a>
                 </li>
                 <li class="sidebar-subitem">
-                    <a href="#">Restart Server</a>
+                    <a href="#" id="restart-btn">Restart Server</a>
                 </li>
                 <li class="sidebar-subitem">
-                    <a href="#">Shutdown Server</a>
+                    <a href="#" id="shutdown-btn">Shutdown Server</a>
                 </li>
             </ul>
         </li>
