--- a/web/templates/sidenav.html
+++ b/web/templates/sidenav.html
@@ -6,7 +6,6 @@
     <script src="{{ url_for('static', filename='js/sidenav.js') }}"></script>
 {% endblock %}
 
-
 <nav id="sidebar" class="sidebar">
     <ul class="sidebar-items">
 
@@ -23,7 +22,7 @@
             <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fas fa-tools"></i><span class="link-text">Actions</span></a>
             <ul class="collapse list-unstyled" id="homeSubmenu">
                 <li class="sidebar-subitem">
-                    <a href="#">Check for Updates</a>
+                    <a href="#" id="check-updates-btn">Check for Updates</a>
                 </li>
                 <li class="sidebar-subitem">
                     <a href="#" id="restart-btn">Restart Server</a>
