--- a/web/templates/modals/update_modal.html
+++ b/web/templates/modals/update_modal.html
@@ -11,7 +11,7 @@
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary close-modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <button id="update-btn" type="button" class="btn btn-primary" disabled>Update</button>
         </div>
         </div>
     </div>
